BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/LockActivityChildrenContainer__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>RecordIDs1__c</fullName>
        <description>The record ID to the corresponding LockActivityChildren records.</description>
        <inlineHelpText>The record ID to the corresponding LockActivityChildren records.</inlineHelpText>
        <label>List 1 of children to Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordIDs2__c</fullName>
        <description>A list of LockActivityChildren record IDs. Please separate with commas.</description>
        <inlineHelpText>A list of LockActivityChildren record IDs. Please separate with commas.</inlineHelpText>
        <label>List 2 of children to Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordIDs3__c</fullName>
        <description>A list of LockActivityChildren record IDs. Please separate with commas.</description>
        <inlineHelpText>A list of LockActivityChildren record IDs. Please separate with commas.</inlineHelpText>
        <label>List 3 of children to Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veeva EM Event Locking Setting</label>
</CustomObject>